[fix] [landing] header on tablet page nav spacing
Summary:
fix visual bug were page nav items are too far from each other

Before: {F6094}

After: {F6095}

Test Plan: resize window see the spacing difference.

Reviewers: atul, ashoat

Reviewed By: atul, ashoat

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga, boristopalov

Differential Revision: https://phabricator.ashoat.com/D2661

--- a/landing/header.css
+++ b/landing/header.css
@@ -30,7 +30,7 @@ nav.wrapper {
   transition: 300ms;
 }
 
-div.page_nav {
+.page_nav {
   grid-area: page_nav;
   display: flex;
   justify-content: space-evenly;
@@ -86,6 +86,7 @@ button.request_access {
 
   .page_nav {
     justify-content: center;
+    gap: 12px;
   }
 
   .request_access,
